--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.7.1"
+    "mongoose": "^6.7.1",
+    "socket.io": "^4.5.3"
   }
 }
